# sokoban-core

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: docs.yml
benches/benches/: deadlock.rs  level.rs  map.rs  path_finding.rs  solver.rs  utils.rs
src/: action.rs  actions.rs  collection.rs  deadlock.rs  direction.rs  error.rs  level.rs  lib.rs  map.rs  math.rs  node.rs  path_finding.rs  run_length.rs  solver.rs  state.rs
tests/: action.rs  actions.rs  collection.rs  deadlock.rs  direction.rs  level.rs  map.rs  path_finding.rs  run_length.rs  solver.rs  utils.rs
